# peircean-abduction

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  verify_peircean.py
.claude/: CONTINUE.md
.claude/skills/mcp-builder/scripts/: evaluation.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml
docs/: EVALUATION.md  MCP.md  PEIRCEAN_SPEC.md  QUICKSTART.md  USER_GUIDE.md
docs/concepts/: abductive-reasoning.md
docs/examples/: api-latency-anomaly.md  kubernetes-anomaly.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: configuration.md  evaluation.md  mcp-integration.md  mcp_instructions.md  user-guide.md
docs/reference/: api.md
examples/: international_law.py  quickstart.py
examples/traces/: kubernetes_anomaly.md
peircean/: __init__.py  __main__.py  cli.py  config.py  validate.py
peircean/benchmarks/: __init__.py  providers.py  runner.py  scenarios.py  utils.py
peircean/core/: __init__.py  agent.py  models.py  prompts.py
peircean/mcp/: __init__.py  errors.py  fastmcp.py  inputs.py  server.py  setup.py  types.py
peircean/providers/: __init__.py  registry.py
peircean/training/: __init__.py  generator.py
peircean/utils/: __init__.py  env.py
peircean/wizard/: __init__.py  config_wizard.py
scripts/: validate_mcp.py
tests/: __init__.py  test_cli.py  test_core.py  test_evaluation.py  test_mcp.py  test_setup.py  test_training.py
tests/scenarios/: test_international_law.py
tests/scenarios/international_law/: step1_observe.py  step2_hypothesize.py  step3_evaluate.py
website/: index.html  styles.css
